[package]
name = "cass"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
sqlparser = "0.58"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
thiserror = "1"
base64 = "0.21"
rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = ["tokio-rustls-tls"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
murmur3 = "0.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
