[package]
name = "cass"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
sqlparser = "0.58"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
thiserror = "1"
base64 = "0.21"
rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = ["tokio-rustls-tls"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
murmur3 = "0.5"
futures = "0.3"
chrono = "0.4"
prometheus = "0.13"
sysinfo = "0.30"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
s3s = "0.12.0-minio-preview.3"
s3s-fs = "0.12.0-minio-preview.3"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
